manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
    #   nodeSelector:
        # name: vmi71989
      containers:
      - name: keycloak
        image: $IMAGE
        ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
          - name: management
            containerPort: 9990
