manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $APP
  labels:
    app: $APP
    name: $APP

spec:

  type: NodePort

  selector:
    app: $APP

  ports:

  - port:       8080
    protocol:   TCP
    targetPort: 8080
    name:       http

  - port:       443
    protocol:   TCP
    targetPort: 8443
    name:       https

  - port:       9990
    protocol:   TCP
    targetPort: 9990
    name:       mgmt
